// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser should match snapshot 1`] = `
Object {
  "data": Array [
    Object {
      "content": Array [
        <a
          class="text-gray-500 underline"
          name="noun"
        />,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          n
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=0"
        target="_blank"
        title="General"
      >
        gen.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписывание&l1=2&l2=1"
          target="_blank"
        >
          предписывание
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=распоряжение&l1=2&l2=1"
          target="_blank"
        >
          распоряжение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=рекомендация&l1=2&l2=1"
          target="_blank"
        >
          рекомендация
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=неписаный+закон&l1=2&l2=1"
          target="_blank"
        >
          неписаный закон
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=назначение&l1=2&l2=1"
          target="_blank"
        >
          назначение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=рецепт&l1=2&l2=1"
          target="_blank"
        >
          рецепт
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пресекательный+срок&l1=2&l2=1"
          target="_blank"
        >
          пресекательный срок
        </a>,
        
                            ,
        <span
          class="description"
        >
          (Lavrov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=истечение+срока&l1=2&l2=1"
          target="_blank"
        >
          истечение срока
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=инструкция&l1=2&l2=1"
          target="_blank"
        >
          инструкция
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=диоптрия&l1=2&l2=1"
          target="_blank"
        >
          диоптрия
        </a>,
        
                            ,
        <span
          class="description"
        >
          (Контекстный перевод. Например, prescription glasses eugenius_rus)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=установка&l1=2&l2=1"
          target="_blank"
        >
          установка
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=директива&l1=2&l2=1"
          target="_blank"
        >
          директива
        </a>,
        
                            ,
        <span
          class="description"
        >
          (ssn)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=30"
        target="_blank"
        title="Agriculture"
      >
        agric.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписание&l1=2&l2=1"
          target="_blank"
        >
          предписание
        </a>,
        
                            ,
        <span
          class="description"
        >
          (лекарства)
        </span>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=указание&l1=2&l2=1"
          target="_blank"
        >
          указание
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=291"
        target="_blank"
        title="Business"
      >
        busin.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+приобретательной+давности&l1=2&l2=1"
          target="_blank"
        >
          право приобретательной давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+погасительной+давности&l1=2&l2=1"
          target="_blank"
        >
          право погасительной давности
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=157"
        target="_blank"
        title="Dentistry"
      >
        dentist.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пропись+для+брекета&l1=2&l2=1"
          target="_blank"
        >
          пропись для брекета
        </a>,
        
                            ,
        <span
          class="description"
        >
          (характеристики положения паза брекета по отношению к основанию брекета schyzomaniac)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=51"
        target="_blank"
        title="Economy"
      >
        econ.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=распоряжение&l1=2&l2=1"
          target="_blank"
        >
          распоряжение
        </a>,
        
                            ,
        <span
          class="description"
        >
          (инструкция, указание)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=93"
        target="_blank"
        title="Forestry"
      >
        forestr.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=лесорубочный+билет&l1=2&l2=1"
          target="_blank"
        >
          лесорубочный билет
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=48"
        target="_blank"
        title="Law"
      >
        law
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+давности&l1=2&l2=1"
          target="_blank"
        >
          право давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=давность&l1=2&l2=1"
          target="_blank"
        >
          давность
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=приобретательная+давность&l1=2&l2=1"
          target="_blank"
        >
          приобретательная давность
        </a>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=данность&l1=2&l2=1"
          target="_blank"
        >
          данность
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+приобретательной+или+исковой+давности&l1=2&l2=1"
          target="_blank"
        >
          срок приобретательной или исковой давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (The process of acquiring title to property by reason of uninterrupted possession of
                                specified duration. Also called positive prescription. Law The limitation of time beyond
                                which an action, debt, or crime is no longer valid or enforceable. Also called negative
                                prescription. Maksim Kozlov)
        </span>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=метод+приобретения+права+на+использование+земельного+участка+без+права+на+собственность.+метод+обусловлен+длительным+использованием+данного+земельного+участка.&l1=2&l2=1"
          target="_blank"
        >
          метод приобретения права на использование земельного участка без права на
                                собственность. метод обусловлен длительным использованием данного земельного участка.
        </a>,
        
                            ,
        <span
          class="description"
        >
          (mazurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+исковой+давности&l1=2&l2=1"
          target="_blank"
        >
          срок исковой давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=исковая+давность&l1=2&l2=1"
          target="_blank"
        >
          исковая давность
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+давности&l1=2&l2=1"
          target="_blank"
        >
          срок давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=517"
        target="_blank"
        title="Makarov"
      >
        Makarov.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=задание&l1=2&l2=1"
          target="_blank"
        >
          задание
        </a>,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=8"
        target="_blank"
        title="Medical"
      >
        med.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пропись&l1=2&l2=1"
          target="_blank"
        >
          пропись
        </a>,
        
                            ,
        <span
          class="description"
        >
          (лекарственная)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=176"
        target="_blank"
        title="Nephrology"
      >
        nephr.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=режим&l1=2&l2=1"
          target="_blank"
        >
          режим
        </a>,
        
                            ,
        <span
          class="description"
        >
          (inadequate dialysis prescription Ying)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=431"
        target="_blank"
        title="Notarial practice"
      >
        notar.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=норма&l1=2&l2=1"
          target="_blank"
        >
          норма
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=приобретение+по+давности&l1=2&l2=1"
          target="_blank"
        >
          приобретение по давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=давность&l1=2&l2=1"
          target="_blank"
        >
          давность
        </a>,
        
                            ,
        <span
          class="description"
        >
          (in most general sense of the word, as it is used, for example, in louisiana)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=211"
        target="_blank"
        title="Officialese"
      >
        offic.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=регламентация&l1=2&l2=1"
          target="_blank"
        >
          регламентация
        </a>,
        
                            ,
        <span
          class="description"
        >
          (igisheva)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=регламентирование&l1=2&l2=1"
          target="_blank"
        >
          регламентирование
        </a>,
        
                            ,
        <span
          class="description"
        >
          (igisheva)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=289"
        target="_blank"
        title="Patents"
      >
        patents.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=положение&l1=2&l2=1"
          target="_blank"
        >
          положение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписание&l1=2&l2=1"
          target="_blank"
        >
          предписание
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=утверждение+права+на+что-либо+по+давности+владения&l1=2&l2=1"
          target="_blank"
        >
          утверждение права на что-либо по давности владения
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=107"
        target="_blank"
        title="Psychology"
      >
        psychol.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=прописанное+лекарство&l1=2&l2=1"
          target="_blank"
        >
          прописанное лекарство
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=136"
        target="_blank"
        title="Slang"
      >
        slang
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=наркотик,+выдаваемый+по+рецепту&l1=2&l2=1"
          target="_blank"
        >
          наркотик, выдаваемый по рецепту
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=20"
        target="_blank"
        title="Sports"
      >
        sport.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=рецептура&l1=2&l2=1"
          target="_blank"
        >
          рецептура
        </a>,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <span>
          time of
        </span>,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <em>
          n
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=(time+of)+prescription&sc=51"
        target="_blank"
        title="Economy"
      >
        econ.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+давности&l1=2&l2=1"
          target="_blank"
        >
          срок давности
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <a
          class="text-gray-500 underline"
          name="abbreviation"
        />,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          abbr.
        </em>,
        <span>
          |
        </span>,
        <a
          class="text-gray-500 underline"
          href="#noun"
        >
          n
        </a>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=10000&s=prescription&sc=120"
        target="_blank"
        title="Abbreviation, Medical"
      >
        abbr., med.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=presc&l1=1&l2=2&thes=1"
          target="_blank"
        >
          presc
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=Prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          Prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          abbr.
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=10000&s=Prescription&sc=120"
        target="_blank"
        title="Abbreviation"
      >
        abbr.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=7&l1=1&l2=2&thes=1"
          target="_blank"
        >
          7
        </a>,
      ],
      "type": "translation",
    },
  ],
  "l1": "1",
  "l2": "2",
}
`;

exports[`Parser should match snapshot 2 1`] = `
Object {
  "data": Array [
    Object {
      "content": Array [
        <a
          class="text-gray-500 underline"
          name="noun"
        />,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          сущ.
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=0"
        target="_blank"
        title="Общая лексика"
      >
        общ.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписывание&l1=2&l2=1"
          target="_blank"
        >
          предписывание
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=распоряжение&l1=2&l2=1"
          target="_blank"
        >
          распоряжение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=рекомендация&l1=2&l2=1"
          target="_blank"
        >
          рекомендация
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=неписаный+закон&l1=2&l2=1"
          target="_blank"
        >
          неписаный закон
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=назначение&l1=2&l2=1"
          target="_blank"
        >
          назначение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=рецепт&l1=2&l2=1"
          target="_blank"
        >
          рецепт
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пресекательный+срок&l1=2&l2=1"
          target="_blank"
        >
          пресекательный срок
        </a>,
        
                            ,
        <span
          class="description"
        >
          (Lavrov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=истечение+срока&l1=2&l2=1"
          target="_blank"
        >
          истечение срока
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=инструкция&l1=2&l2=1"
          target="_blank"
        >
          инструкция
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=диоптрия&l1=2&l2=1"
          target="_blank"
        >
          диоптрия
        </a>,
        
                            ,
        <span
          class="description"
        >
          (Контекстный перевод. Например, prescription glasses eugenius_rus)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=установка&l1=2&l2=1"
          target="_blank"
        >
          установка
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=директива&l1=2&l2=1"
          target="_blank"
        >
          директива
        </a>,
        
                            ,
        <span
          class="description"
        >
          (ssn)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=291"
        target="_blank"
        title="Бизнес"
      >
        бизн.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+приобретательной+давности&l1=2&l2=1"
          target="_blank"
        >
          право приобретательной давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+погасительной+давности&l1=2&l2=1"
          target="_blank"
        >
          право погасительной давности
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=211"
        target="_blank"
        title="Канцеляризм"
      >
        канц.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=регламентация&l1=2&l2=1"
          target="_blank"
        >
          регламентация
        </a>,
        
                            ,
        <span
          class="description"
        >
          (igisheva)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=регламентирование&l1=2&l2=1"
          target="_blank"
        >
          регламентирование
        </a>,
        
                            ,
        <span
          class="description"
        >
          (igisheva)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=93"
        target="_blank"
        title="Лесоводство"
      >
        лес.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=лесорубочный+билет&l1=2&l2=1"
          target="_blank"
        >
          лесорубочный билет
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=517"
        target="_blank"
        title="Макаров"
      >
        Макаров.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=задание&l1=2&l2=1"
          target="_blank"
        >
          задание
        </a>,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=8"
        target="_blank"
        title="Медицина"
      >
        мед.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пропись&l1=2&l2=1"
          target="_blank"
        >
          пропись
        </a>,
        
                            ,
        <span
          class="description"
        >
          (лекарственная)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=176"
        target="_blank"
        title="Нефрология"
      >
        нефр.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=режим&l1=2&l2=1"
          target="_blank"
        >
          режим
        </a>,
        
                            ,
        <span
          class="description"
        >
          (inadequate dialysis prescription Ying)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=431"
        target="_blank"
        title="Нотариальная практика"
      >
        нотар.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=норма&l1=2&l2=1"
          target="_blank"
        >
          норма
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=приобретение+по+давности&l1=2&l2=1"
          target="_blank"
        >
          приобретение по давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=давность&l1=2&l2=1"
          target="_blank"
        >
          давность
        </a>,
        
                            ,
        <span
          class="description"
        >
          (in most general sense of the word, as it is used, for example, in louisiana)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=289"
        target="_blank"
        title="Патенты"
      >
        патент.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=положение&l1=2&l2=1"
          target="_blank"
        >
          положение
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписание&l1=2&l2=1"
          target="_blank"
        >
          предписание
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=утверждение+права+на+что-либо+по+давности+владения&l1=2&l2=1"
          target="_blank"
        >
          утверждение права на что-либо по давности владения
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=107"
        target="_blank"
        title="Психология"
      >
        психол.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=прописанное+лекарство&l1=2&l2=1"
          target="_blank"
        >
          прописанное лекарство
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=30"
        target="_blank"
        title="Сельское хозяйство"
      >
        <span
          class="inline-flag"
        >
          с/х.
        </span>
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=предписание&l1=2&l2=1"
          target="_blank"
        >
          предписание
        </a>,
        
                            ,
        <span
          class="description"
        >
          (лекарства)
        </span>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=указание&l1=2&l2=1"
          target="_blank"
        >
          указание
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=136"
        target="_blank"
        title="Сленг"
      >
        сл.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=наркотик,+выдаваемый+по+рецепту&l1=2&l2=1"
          target="_blank"
        >
          наркотик, выдаваемый по рецепту
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=20"
        target="_blank"
        title="Спорт"
      >
        спорт.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=рецептура&l1=2&l2=1"
          target="_blank"
        >
          рецептура
        </a>,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=157"
        target="_blank"
        title="Стоматология"
      >
        стом.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=пропись+для+брекета&l1=2&l2=1"
          target="_blank"
        >
          пропись для брекета
        </a>,
        
                            ,
        <span
          class="description"
        >
          (характеристики положения паза брекета по отношению к основанию брекета schyzomaniac)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=51"
        target="_blank"
        title="Экономика"
      >
        эк.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=распоряжение&l1=2&l2=1"
          target="_blank"
        >
          распоряжение
        </a>,
        
                            ,
        <span
          class="description"
        >
          (инструкция, указание)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=prescription&sc=48"
        target="_blank"
        title="Юридическая лексика"
      >
        юр.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=право+давности&l1=2&l2=1"
          target="_blank"
        >
          право давности
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=давность&l1=2&l2=1"
          target="_blank"
        >
          давность
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=приобретательная+давность&l1=2&l2=1"
          target="_blank"
        >
          приобретательная давность
        </a>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=данность&l1=2&l2=1"
          target="_blank"
        >
          данность
        </a>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+приобретательной+или+исковой+давности&l1=2&l2=1"
          target="_blank"
        >
          срок приобретательной или исковой давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (The process of acquiring title to property by reason of uninterrupted possession of
                                specified duration. Also called positive prescription. Law The limitation of time beyond
                                which an action, debt, or crime is no longer valid or enforceable. Also called negative
                                prescription. Maksim Kozlov)
        </span>,
        ;
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=метод+приобретения+права+на+использование+земельного+участка+без+права+на+собственность.+метод+обусловлен+длительным+использованием+данного+земельного+участка.&l1=2&l2=1"
          target="_blank"
        >
          метод приобретения права на использование земельного участка без права на
                                собственность. метод обусловлен длительным использованием данного земельного участка.
        </a>,
        
                            ,
        <span
          class="description"
        >
          (mazurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+исковой+давности&l1=2&l2=1"
          target="_blank"
        >
          срок исковой давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=исковая+давность&l1=2&l2=1"
          target="_blank"
        >
          исковая давность
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        ; ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+давности&l1=2&l2=1"
          target="_blank"
        >
          срок давности
        </a>,
        
                            ,
        <span
          class="description"
        >
          (MichaelBurov)
        </span>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <span>
          time of
        </span>,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <em>
          сущ.
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=2&s=(time+of)+prescription&sc=51"
        target="_blank"
        title="Экономика"
      >
        эк.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=срок+давности&l1=2&l2=1"
          target="_blank"
        >
          срок давности
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <a
          class="text-gray-500 underline"
          name="abbreviation"
        />,
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          сокр.
        </em>,
        <span>
          |
        </span>,
        <a
          class="text-gray-500 underline"
          href="#noun"
        >
          сущ.
        </a>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=10000&s=prescription&sc=120"
        target="_blank"
        title="Сокращение, Медицина"
      >
        сокр., мед.
      </a>,
      "trans": Array [
        
                            ,
        <a
          href="https://www.multitran.com/m.exe?s=presc&l1=1&l2=2&thes=1"
          target="_blank"
        >
          presc
        </a>,
        
                        ,
      ],
      "type": "translation",
    },
    Object {
      "content": Array [
        <a
          class="text-base"
          href="https://www.multitran.com/m.exe?a=118&s=Prescription&l1=1&l2=2&init=1"
          target="_blank"
        >
          Prescription
        </a>,
        <span>
          [prɪ'skrɪpʃ(ə)n]
        </span>,
        <em>
          сокр.
        </em>,
      ],
      "type": "header",
    },
    Object {
      "subjLink": <a
        href="https://www.multitran.com/m.exe?a=110&l1=1&l2=10000&s=Prescription&sc=120"
        target="_blank"
        title="Сокращение"
      >
        сокр.
      </a>,
      "trans": Array [
        <a
          href="https://www.multitran.com/m.exe?s=7&l1=1&l2=2&thes=1"
          target="_blank"
        >
          7
        </a>,
      ],
      "type": "translation",
    },
  ],
  "l1": "1",
  "l2": "2",
}
`;
